JumpScript/tests/baselines/reference/commentOnImportStatement3.errors.txt
tests/cases/compiler/commentOnImportStatement3.jump(4,22): error TS2307: Cannot find module './foo'.


==== tests/cases/compiler/commentOnImportStatement3.jump (1 errors) ====
    /* copyright */
    
    /* not copyright */
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2307: Cannot find module './foo'.